# HomeWork_2

./: CMakeLists.txt
.github/workflows/: CI.yml
dynamicVersion/headers/: kMeans.h
dynamicVersion/src/: Vectors.txt  kMeans.c  main.c
project/src/: kMeansD.c  kMeansS.c  main.c
staticVersion/headers/: kMeans.h
staticVersion/src/: kMeans.c  main.c
test/: dynamic_test.cpp  static_test.cpp  tests.cpp
